--- a/conectafreelance/src/styles.css
+++ b/conectafreelance/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  left: 0;
+  right: 0;
+  box-sizing: border-box;
+}
